force-app/main/default/objects/Fix_Test__c/Fix_Test__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Fix Test</label>
</CustomObject>