force-app/main/default/objects/Fix_Test__c/fields/Fix__c.field-meta.xml
<CustomField>
    <fullName>Fix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fix</label>
    <type>Checkbox</type>
</CustomField>