force-app/main/default/objects/Fix_Test__c/fields/Fix_Number__c.field-meta.xml
<CustomField>
    <fullName>Fix_Number__c</fullName>
    <label>Fix Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>