force-app/main/default/objects/Fix_Test__c/fields/Fix_Text__c.field-meta.xml
<CustomField>
    <fullName>Fix_Text__c</fullName>
    <label>Fix Text</label>
    <length>12</length>
    <type>Text</type>
</CustomField>